--- a/public/latest/assets/admin-css/student-dash.css
+++ b/public/latest/assets/admin-css/student-dash.css
@@ -248,7 +248,7 @@
   top: 13.5%;
   width: 110%;
   height: 115%;
-  visibility: hidden;
+  display: none;
   transition: ease-in-out 0.3s;
   z-index: 999;
 }
@@ -969,6 +969,122 @@
   line-height: 150%;
 }
 
+.course-status-wrap {
+  border-radius: 0.5rem;
+  background: var(--background-light-paper, #FFF);
+  box-shadow: 0px 12px 24px -4px rgba(145, 158, 171, 0.12), 0px 0px 2px 0px rgba(145, 158, 171, 0.2);
+}
+.course-status-wrap .d-flex {
+  align-items: center;
+  justify-content: space-between;
+  padding: 1.125rem 1.5rem;
+}
+.course-status-wrap .d-flex h4 {
+  color: var(--neutral-color-neutral-90, #101C2D);
+  font-size: 1.25rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 1.75rem;
+}
+.course-status-wrap .d-flex a {
+  border-radius: 0.375rem;
+  background: var(--transparent-grey-16, rgba(145, 158, 171, 0.16));
+  color: var(--neutral-color-neutral-90, #101C2D);
+  font-size: 0.75rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 1.25rem;
+  display: inline-block;
+  padding: 0.3rem 0.5rem;
+  margin-right: 1rem;
+}
+.course-status-wrap table {
+  width: 100%;
+}
+.course-status-wrap table tr th {
+  padding: 0.7rem 1rem;
+  color: var(--neutral-color-neutral-60, #66768E);
+  font-size: 0.8125rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.5rem;
+  background: var(--background-light-neutral, #F4F6F8);
+}
+.course-status-wrap table tr td {
+  padding: 0.6rem 1.5rem;
+  border-bottom: 1px solid var(--stroke, #E4E7EC);
+  background: var(--background-light-paper, #FFF);
+}
+.course-status-wrap table tr td p {
+  overflow: hidden;
+  color: var(--black, #212B36);
+  text-overflow: ellipsis;
+  whitespace: nowrap;
+  font-size: 0.875rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.375rem;
+}
+.course-status-wrap table tr td p i {
+  color: #F8AA00;
+}
+.course-status-wrap table tr td .media {
+  align-items: center;
+}
+.course-status-wrap table tr td .media .avatar {
+  margin-right: 1rem;
+}
+.course-status-wrap table tr td .media .avatar img {
+  width: 0.2em 0.4rem;
+  height: 2.4rem;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 50%;
+}
+.course-status-wrap table tr td .media h5 {
+  color: var(--neutral-color-neutral-90, #101C2D);
+  font-size: 0.875rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 1.375rem;
+}
+.course-status-wrap table tr td .media h5 span {
+  color: var(--neutral-color-neutral-60, #66768E);
+  font-size: 12px;
+  display: inline-block;
+  margin-left: auto;
+}
+.course-status-wrap table tr td .media p {
+  overflow: hidden;
+  color: var(--neutral-color-neutral-60, #66768E);
+  text-overflow: ellipsis;
+  font-size: 0.75rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.125rem;
+}
+.course-status-wrap table tr td a {
+  border-radius: 0.375rem;
+  background: var(--transparent-grey-16, rgba(145, 158, 171, 0.16));
+  color: var(--neutral-color-neutral-90, #101C2D);
+  font-size: 0.75rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 1.25rem;
+  display: inline-block;
+  padding: 0.3rem 0.5rem;
+}
+.course-status-wrap table tr td .progress {
+  border-radius: 3.125rem;
+  background: rgba(75, 97, 255, 0.24);
+  height: 0.25rem;
+  margin-top: 0.4rem;
+}
+.course-status-wrap table tr td .progress .progress-bar {
+  border-radius: 3.125rem;
+  background: #171B3C;
+}
+
 @media (min-width: 320px) and (max-width: 574px) {
   .student-courses-lists-pages .course-ol-box {
     left: 0%;
@@ -1100,6 +1216,27 @@
     padding-top: 1.5rem;
     margin-top: 1.5rem;
   }
+  .course-status-wrap table {
+    width: 100%;
+    display: block;
+    overflow-x: scroll;
+  }
+  .course-status-wrap .d-flex {
+    padding: 0.8rem;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .course-status-wrap .d-flex div {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    margin-top: 0.5rem;
+  }
+  .course-status-wrap table tr th,
+  .course-status-wrap table tr td {
+    padding: 0.5rem;
+    white-space: nowrap;
+  }
 }
 @media (min-width: 574px) and (max-width: 767px) {
   .student-courses-lists-pages .course-ol-box {
@@ -1211,6 +1348,27 @@
   .course-overview-right-part {
     width: 100%;
     margin-top: 1rem;
+  }
+  .course-status-wrap table {
+    width: 100%;
+    display: block;
+    overflow-x: scroll;
+  }
+  .course-status-wrap .d-flex {
+    padding: 0.8rem;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .course-status-wrap .d-flex div {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    margin-top: 0.5rem;
+  }
+  .course-status-wrap table tr th,
+  .course-status-wrap table tr td {
+    padding: 0.5rem;
+    white-space: nowrap;
   }
 }
 @media (min-width: 767px) and (max-width: 992px) {
