--- a/scss/dashboard.scss
+++ b/scss/dashboard.scss
@@ -8,12 +8,16 @@ main {
 
     .container-fluid {
         // padding: 0 6.5rem;
-        max-width: 76rem!important;
+        max-width: 76rem !important;
     }
 }
 
-.btn-check:checked + .btn, .btn.active, .btn.show, .btn:first-child:active, :not(.btn-check) + .btn:active{
-    border-color: transparent!important;
+.btn-check:checked+.btn,
+.btn.active,
+.btn.show,
+.btn:first-child:active,
+:not(.btn-check)+.btn:active {
+    border-color: transparent !important;
 }
 
 .mt-15 {
@@ -167,6 +171,7 @@ main {
 
     .messages-item {
         margin-top: 1rem;
+
         .media {
             align-items: center;
 
@@ -196,8 +201,9 @@ main {
                 font-size: 0.875rem;
                 font-style: normal;
                 font-weight: 600;
-                line-height: 1.375rem; 
-                span{
+                line-height: 1.375rem;
+
+                span {
                     color: var(--neutral-color-neutral-60, #66768E);
                     font-size: 12px;
                     display: inline-block;
@@ -208,13 +214,141 @@ main {
             p {
                 overflow: hidden;
                 color: var(--neutral-color-neutral-60, #66768E);
-                text-overflow: ellipsis; 
+                text-overflow: ellipsis;
                 font-size: 0.75rem;
                 font-style: normal;
                 font-weight: 400;
                 line-height: 1.125rem;
                 /* 150% */
             }
+        }
+    }
+}
+
+
+.course-status-box {
+    border-radius: 0.5rem;
+    background: var(--background-light-paper, #FFF);
+    box-shadow: 0px 12px 24px -4px rgba(145, 158, 171, 0.12), 0px 0px 2px 0px rgba(145, 158, 171, 0.20);
+
+    .d-flex {
+        align-items: center;
+        justify-content: space-between;
+        padding: 1.125rem 1.5rem;
+
+        h4 {
+            color: var(--neutral-color-neutral-90, #101C2D);
+            font-size: 1.25rem;
+            font-style: normal;
+            font-weight: 600;
+            line-height: 1.75rem;
+        }
+
+        a {
+            border-radius: 0.375rem;
+            background: var(--transparent-grey-16, rgba(145, 158, 171, 0.16));
+            color: var(--neutral-color-neutral-90, #101C2D);
+            font-size: 0.75rem;
+            font-style: normal;
+            font-weight: 700;
+            line-height: 1.25rem;
+            display: inline-block;
+            padding: 0.3rem 0.5rem;
+            margin-right: 1rem;
+        }
+
+        select {
+            border-radius: 0.375rem;
+            background: var(--transparent-grey-16, rgba(145, 158, 171, 0.16));
+            color: var(--neutral-color-neutral-90, #101C2D);
+            font-size: 0.75rem;
+            font-style: normal;
+            font-weight: 700;
+            line-height: 1.25rem;
+            display: inline-block;
+            padding: 0.3rem 0.5rem;
+            border: 0;
+        }
+    }
+
+    table {
+        width: 100%;
+
+        tr {
+            th {
+                padding: .7rem 1rem;
+                color: var(--neutral-color-neutral-60, #66768E);
+                font-size: 0.8125rem;
+                font-style: normal;
+                font-weight: 500;
+                line-height: 1.5rem;
+                background: var(--background-light-neutral, #F4F6F8);
+            }
+ 
+
+            td {
+                padding: .6rem 1.5rem;
+                border-bottom: 1px solid var(--stroke, #E4E7EC);
+                background: var(--background-light-paper, #FFF);
+
+                p {
+                    overflow: hidden;
+                    color: var(--black, #212B36);
+                    text-overflow: ellipsis;
+                    whitespace: nowrap;
+                    font-size: 0.875rem;
+                    font-style: normal;
+                    font-weight: 400;
+                    line-height: 1.375rem;
+
+                    i {
+                        color: #F8AA00;
+                    }
+                }
+
+                .media {
+                    align-items: center;
+
+                    .avatar { 
+                        margin-right: 1rem;
+
+                        img {
+                            width: 0.2em 0.4rem;
+                            height: 2.4rem;
+                            object-fit: cover;
+                            border-radius: 50%;
+
+                        } 
+                    }
+
+                    h5 {
+                        color: var(--neutral-color-neutral-90, #101C2D);
+                        font-size: 0.875rem;
+                        font-style: normal;
+                        font-weight: 600;
+                        line-height: 1.375rem;
+
+                        span {
+                            color: var(--neutral-color-neutral-60, #66768E);
+                            font-size: 12px;
+                            display: inline-block;
+                            margin-left: auto;
+                        }
+                    }
+
+                    p {
+                        overflow: hidden;
+                        color: var(--neutral-color-neutral-60, #66768E);
+                        text-overflow: ellipsis;
+                        font-size: 0.75rem;
+                        font-style: normal;
+                        font-weight: 400;
+                        line-height: 1.125rem;
+                    }
+                }
+            }
+
+
         }
     }
 }
@@ -229,11 +363,55 @@ main {
         height: auto;
         margin-bottom: 1.5rem;
     }
+    .course-status-box table {
+        width: 100%;
+        display: block;
+        overflow-x: scroll;
+    }
+
+    .course-status-box .d-flex{
+        padding: 0.8rem;
+        flex-direction: column;
+        align-items: flex-start;
+        div{
+            @include m.df;
+            margin-top: 0.5rem;
+        }
+        
+    }
+
+    .course-status-box table tr th,
+    .course-status-box table tr td{
+        padding: 0.5rem;
+        white-space: nowrap;
+    }
 }
 
 @include q.responsive(landphone) {
     main .container-fluid {
         padding: 0 1rem;
+    }
+    .course-status-box table {
+        width: 100%;
+        display: block;
+        overflow-x: scroll;
+    }
+
+    .course-status-box .d-flex{
+        padding: 0.8rem;
+        flex-direction: column;
+        align-items: flex-start;
+        div{
+            @include m.df;
+            margin-top: 0.5rem;
+        }
+        
+    }
+
+    .course-status-box table tr th,
+    .course-status-box table tr td{
+        padding: 0.5rem;
+        white-space: nowrap;
     }
 }
 
