--- a/scss/elearning.scss
+++ b/scss/elearning.scss
@@ -61,6 +61,10 @@
         }
     }
 
+    .course-thumb-box:hover + div{
+       display: block!important;
+    }
+
     .course-txt-box {
         padding-top: 0.75rem;
         padding: .5rem;
@@ -457,7 +461,7 @@ span.finsihLesson {
 }
 
 .user-search-box-wrap.bundle-search-grid {
-    grid-template-columns: 62% 19% 19%;
+    grid-template-columns: 60% 19% 21%;
 }
 
 .user-search-box-wrap.bundle-select-grid {
@@ -1784,7 +1788,12 @@ span.finsihLesson {
     }
 }
 
-
+.top-perform-courses-lists-pages{
+    .course-single-item{
+        margin-bottom: 1.5rem;
+        height: auto;
+    }
+}
 
 
 
