--- a/scss/message.scss
+++ b/scss/message.scss
@@ -167,20 +167,22 @@
             }
 
             .main-chat-room {
-                padding: 2.5rem 2rem;
+                padding: 2.2rem 2rem;
                 border-top: 1px solid #C5CCD8;
-                padding-top: 0;
+                padding-top: 1rem;
 
                 .chat-messages-box {
                     max-height: 500px;
                     overflow-y: scroll;
+                    @include m.df;
+                    flex-direction: column;
 
                     .message-item {
                         border-radius: 0rem 0.5rem 0.5rem 0.5rem;
                         background: var(--neutral-10, #F9FAFB);
                         box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.06), 0px 1px 3px 0px rgba(16, 24, 40, 0.10);
-                        margin-top: 2rem;
-                        padding: .62rem .88rem;
+                        margin-top: 0rem;
+                        padding: .4rem .7rem;
                         max-width: 96%;
                         display: inline-block;
 
@@ -204,10 +206,15 @@
                         }
                     }
 
-                    .sender {}
+                    .sender {
+                        margin-left: auto;
+                        margin-right: 1rem;
+                        background-color: rgba(231, 235, 255, 0.5);
+                         
+                    }
 
                     .reciver {
-                        margin-left: auto;
+                        margin-right: auto;
                     }
                 }
             }
