--- a/public/latest/assets/admin-css/user.css
+++ b/public/latest/assets/admin-css/user.css
@@ -1530,6 +1530,29 @@
   align-items: center;
 }
 
+.certificate-style-box.login-page-theme-box .media {
+  margin: 0 !important;
+  padding: 0.8rem !important;
+  cursor: pointer;
+}
+.certificate-style-box.login-page-theme-box .media.active {
+  border: 1px solid #294CFF !important;
+  border-radius: 10px !important;
+}
+
+.user-expperience-box .media .media-body img {
+  width: auto !important;
+  height: auto !important;
+}
+
+.preview-img {
+  max-width: 50%;
+  max-height: 124px;
+  margin-top: 2rem;
+  display: block;
+  margin-left: 1rem;
+}
+
 @media (min-width: 320px) and (max-width: 574px) {
   .user-profile-picture .media {
     padding: 1rem;
