--- a/public/assets/css/homepage.css
+++ b/public/assets/css/homepage.css
@@ -113,6 +113,8 @@ h6 {
 }
 .navbar .navbar-brand img {
   width: 10rem;
+  max-height: 3rem;
+  object-fit: cover;
 }
 .navbar .navbar-nav .nav-item .nav-link {
   font-size: 1rem;
