--- a/public/latest/assets/admin-css/message.css
+++ b/public/latest/assets/admin-css/message.css
@@ -182,6 +182,7 @@
   margin-left: auto;
   margin-right: 1rem;
   background-color: rgba(231, 235, 255, 0.5);
+  border-radius: 0.5rem 0rem 0.5rem 0.5rem;
 }
 .message-list-page-wrap .messages-box .chat-main-body-box .main-chat-room .chat-messages-box .reciver {
   margin-right: auto;
