--- a/scss/message.scss
+++ b/scss/message.scss
@@ -210,6 +210,7 @@
                         margin-left: auto;
                         margin-right: 1rem;
                         background-color: rgba(231, 235, 255, 0.5);
+                        border-radius: .5rem 0rem .5rem .5rem;
                          
                     }
 
