--- a/public/latest/assets/admin-css/dashboard.css
+++ b/public/latest/assets/admin-css/dashboard.css
@@ -160,7 +160,7 @@ main .container-fluid {
   margin-right: 1rem;
 }
 .messages-items-wrap .messages-item .media .avatar img {
-  width: 0.2em 0.4rem;
+  width: 2.4rem;
   height: 2.4rem;
   -o-object-fit: cover;
      object-fit: cover;
