--- a/scss/dashboard.scss
+++ b/scss/dashboard.scss
@@ -180,11 +180,10 @@ main {
                 margin-right: 1rem;
 
                 img {
-                    width: 0.2em 0.4rem;
+                    width: 2.4rem;
                     height: 2.4rem;
                     object-fit: cover;
                     border-radius: 50%;
-
                 }
 
                 i {
