--- a/scss/student-dash.scss
+++ b/scss/student-dash.scss
@@ -1570,20 +1570,12 @@
     }
 
     .course-status-wrap table {
-        width: 100%;
-        display: block;
+        width: 100%; 
         overflow-x: scroll;
     }
-
-    .course-status-wrap .d-flex{
-        padding: 0.8rem;
-        flex-direction: column;
-        align-items: flex-start;
-        div{
-            @include m.df;
-            margin-top: 0.5rem;
-        }
-        
+    .total-client-box{
+        margin-bottom: 1rem;
+        height: auto;
     }
 
     .course-status-wrap table tr th,
@@ -1596,6 +1588,11 @@
 @include q.responsive(tablet) {
     .status-card-box {
         margin-bottom: 1rem;
+    }
+
+    .total-client-box{
+        margin-bottom: 1rem;
+        height: auto;
     }
 
     .student-courses-lists-pages .course-single-item {
@@ -1666,12 +1663,22 @@
     .status-card-box {
         margin-bottom: 1rem;
     }
+
+    .total-client-box{
+        margin-bottom: 1rem;
+        height: auto;
+    }
 }
 
 @include q.responsive(regular) {
     .profile-widget-history {
         margin-left: 0;
         margin-right: 0;
+    }
+
+    .total-client-box{
+        margin-bottom: 1rem;
+        height: auto;
     }
 }
 
