--- a/public/latest/assets/admin-css/elearning.css
+++ b/public/latest/assets/admin-css/elearning.css
@@ -1646,6 +1646,14 @@ span.finsihLesson {
   .share-on-social-wrap .copy-link {
     grid-template-columns: 70% 30%;
   }
+  .course-single-item {
+    margin-bottom: 1rem;
+    height: auto;
+  }
+  .course-single-item .course-thumb-box img {
+    display: block;
+    width: 100%;
+  }
 }
 @media (min-width: 574px) and (max-width: 767px) {
   .course-title {
@@ -1667,9 +1675,29 @@ span.finsihLesson {
     margin-top: 2rem;
     padding: 1rem;
   }
+  .course-single-item .course-thumb-box img {
+    display: block;
+    width: 100%;
+  }
 }
 @media (min-width: 767px) and (max-width: 992px) {
   .course-outline-wrap {
     margin-top: 2rem;
+  }
+  .course-single-item .course-thumb-box img {
+    display: block;
+    width: 100%;
+  }
+}
+@media (min-width: 992px) and (max-width: 1199px) {
+  .course-single-item .course-thumb-box img {
+    display: block;
+    width: 100%;
+  }
+}
+@media (min-width: 1199px) and (max-width: 1399px) {
+  .course-single-item .course-thumb-box img {
+    display: block;
+    width: 100%;
   }
 }
