--- a/public/latest/assets/admin-css/subscription.css
+++ b/public/latest/assets/admin-css/subscription.css
@@ -248,6 +248,10 @@
   box-shadow: 0px 4px 8px 0px rgba(145, 158, 171, 0.16);
 }
 
+.package-new-header {
+  grid-template-columns: 70% 15% 15%;
+}
+
 @media (min-width: 320px) and (max-width: 574px) {
   .package-list-header {
     padding: 1rem;
@@ -273,7 +277,6 @@
   .subscription-table-wrap table {
     width: 100%;
     overflow-x: scroll;
-    display: block;
   }
   .subscription-table-wrap table tr th,
   .subscription-table-wrap table tr td {
@@ -282,19 +285,18 @@
 }
 @media (min-width: 767px) and (max-width: 992px) {
   .package-list-header {
-    grid-template-columns: 30% 70%;
+    grid-template-columns: 70% 30%;
     grid-gap: 1rem;
   }
 }
 @media (min-width: 992px) and (max-width: 1199px) {
   .package-list-header {
-    grid-template-columns: 30% 70%;
+    grid-template-columns: 80% 20%;
     grid-gap: 1rem;
   }
 }
 @media (min-width: 1199px) and (max-width: 1399px) {
   .package-list-header {
-    grid-template-columns: 12% 45% 20% 20%;
-    grid-gap: 1rem;
+    grid-template-columns: 69% 15% 15%;
   }
 }
