--- a/scss/user.scss
+++ b/scss/user.scss
@@ -2088,6 +2088,10 @@
     .contact-info-box h4{
         font-size: 1.2rem;
     }
+
+    .user-header-bttn{
+        text-align: left;
+    }
 }
 
 // landscape phone device 
