--- a/public/latest/assets/admin-css/subscription.css
+++ b/public/latest/assets/admin-css/subscription.css
@@ -267,6 +267,15 @@
   .subscription-table-wrap table tr td {
     white-space: nowrap;
   }
+  .top-card-box {
+    margin-bottom: 1rem;
+  }
+  .top-card-box h5 {
+    font-size: 0.8rem;
+  }
+  .top-card-box h4 {
+    font-size: 1rem;
+  }
 }
 @media (min-width: 574px) and (max-width: 767px) {
   .package-list-header {
@@ -282,11 +291,20 @@
   .subscription-table-wrap table tr td {
     white-space: nowrap;
   }
+  .top-card-box {
+    margin-bottom: 1rem;
+  }
+  .payment-table-admin.subscription-table-wrap table {
+    display: block;
+  }
 }
 @media (min-width: 767px) and (max-width: 992px) {
   .package-list-header {
     grid-template-columns: 70% 30%;
     grid-gap: 1rem;
+  }
+  .top-card-box {
+    margin-bottom: 1rem;
   }
 }
 @media (min-width: 992px) and (max-width: 1199px) {
