--- a/public/latest/assets/admin-css/user.css
+++ b/public/latest/assets/admin-css/user.css
@@ -1757,6 +1757,9 @@
   .contact-info-box h4 {
     font-size: 1.2rem;
   }
+  .user-header-bttn {
+    text-align: left;
+  }
 }
 @media (min-width: 574px) and (max-width: 767px) {
   .contact-info-box {
