--- a/public/latest/assets/admin-css/elearning.css
+++ b/public/latest/assets/admin-css/elearning.css
@@ -310,7 +310,7 @@ span.finsihLesson {
   border-radius: 0.75rem;
   border: 1px solid var(--neutral-color-neutral-30, #E5ECF6);
   background: #FFF;
-  padding: 1.5rem;
+  padding: 1rem;
   max-height: 560px;
   overflow-y: scroll;
 }
@@ -379,6 +379,20 @@ span.finsihLesson {
 .course-outline-wrap .accordion .accordion-button::after,
 .course-outline-wrap .accordion .accordion-button:not(.collapsed)::after {
   background-image: none !important;
+  width: 0 !important;
+  height: 0 !important;
+}
+
+.add-lesson-bttn {
+  margin-bottom: 1rem;
+}
+.add-lesson-bttn a {
+  display: inline-block;
+  padding: 0.4rem 1rem;
+  font-size: 0.85rem;
+  color: #fff;
+  background-color: #294CFF;
+  border-radius: 2rem;
 }
 
 .related-course-box {
