--- a/scss/message.scss
+++ b/scss/message.scss
@@ -251,6 +251,32 @@
     }
 }
 
+.student-messages-page{
+    .messages-box .chat-main-body-box .main-chat-room .chat-messages-box .message-item{
+        margin-top: 1rem!important;
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 @include q.responsive(phone) {
     .message-list-page-wrap .messages-box { 
         grid-template-columns: 100%;
