--- a/scss/student-dash.scss
+++ b/scss/student-dash.scss
@@ -254,35 +254,22 @@
 .student-courses-lists-pages {
     .course-single-item {
         position: relative;
-
-        .btn-ellip {
-            position: absolute;
-            right: 1rem;
-            top: 1rem;
-            background-color: rgba(255, 255, 255, 0.457);
-            z-index: 9;
-            border-radius: 50%;
-            width: 2rem;
-            height: 2rem;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color: #fff;
-        }
+        transition: ease-in-out 0.3s;
     }
 
     .course-ol-box {
         border-radius: 0.5rem;
         background: var(--background-light-paper, #FFF);
-        padding: 1rem .75rem;
+        padding: 1rem 0.75rem;
         position: absolute;
-        left: -5%;
-        top: 13.5%;
+        right: -103%;
+        top: -4%;
         width: 110%;
-        height: 115%;
-        display: none;
-        transition: ease-in-out .3s;
+        height: 108%;
+        transition: ease-in-out 0.3s;
         z-index: 999;
+        border: 1px solid #ccc;
+        transform: scale(0);
 
         h5 {
             color: var(--text-light-primary, #212B36);
@@ -364,9 +351,11 @@
         }
     }
 
-    .active-ol {
-        .course-ol-box {
-            visibility: visible;
+    .course-single-item {
+        &:hover{
+            .course-ol-box{
+                transform: scale(1);
+            }
         }
     }
 
@@ -399,6 +388,8 @@
         }
     }
 }
+
+
 
 .common-bttn {
     border-radius: 0.375rem;
@@ -1407,19 +1398,20 @@
         overflow-x: scroll;
     }
 
-    .course-status-wrap .d-flex{
+    .course-status-wrap .d-flex {
         padding: 0.8rem;
         flex-direction: column;
         align-items: flex-start;
-        div{
+
+        div {
             @include m.df;
             margin-top: 0.5rem;
         }
-        
+
     }
 
     .course-status-wrap table tr th,
-    .course-status-wrap table tr td{
+    .course-status-wrap table tr td {
         padding: 0.5rem;
         white-space: nowrap;
     }
@@ -1570,16 +1562,17 @@
     }
 
     .course-status-wrap table {
-        width: 100%; 
+        width: 100%;
         overflow-x: scroll;
     }
-    .total-client-box{
+
+    .total-client-box {
         margin-bottom: 1rem;
         height: auto;
     }
 
     .course-status-wrap table tr th,
-    .course-status-wrap table tr td{
+    .course-status-wrap table tr td {
         padding: 0.5rem;
         white-space: nowrap;
     }
@@ -1590,7 +1583,7 @@
         margin-bottom: 1rem;
     }
 
-    .total-client-box{
+    .total-client-box {
         margin-bottom: 1rem;
         height: auto;
     }
@@ -1664,7 +1657,7 @@
         margin-bottom: 1rem;
     }
 
-    .total-client-box{
+    .total-client-box {
         margin-bottom: 1rem;
         height: auto;
     }
@@ -1676,7 +1669,7 @@
         margin-right: 0;
     }
 
-    .total-client-box{
+    .total-client-box {
         margin-bottom: 1rem;
         height: auto;
     }
